# claude-tmux-control

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.ko.md  README.md  claude_pricing.json  claude_tmux_control.py  ctc_bridge_sessions.py  ctc_cli.py  ctc_launch.py  ctc_pricing.py  ctc_state.py  ctc_streaming.py  ctc_tmux.py  ctc_transcripts.py  pyproject.toml  transcript_events.py
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
docs/: PRD.ko.md  PRD.md  README.ko.md  README.md  claude-code-first-run-preseed.ko.md  claude-code-first-run-preseed.md  cli-manual.ko.md  cli-manual.md  docker.ko.md  docker.md  implementation-checklist.ko.md  implementation-checklist.md  local-storage-plan.ko.md  local-storage-plan.md  operations.ko.md  operations.md  quickstart-web-client.ko.md  quickstart-web-client.md  release.ko.md  release.md  security.ko.md  security.md  test-scenarios.ko.md  test-scenarios.md  web-chat-app-flow.html  web-chat-integration-guide.html  web-chat-integration-guide.ko.md  web-chat-integration-guide.md
docs/superpowers/plans/: 2026-05-18-client-integration-completion.md  2026-05-28-module-extraction-refactor-plan.md
examples/: README.ko.md  README.md  docker-compose.yml  shell-stream.sh  web-client-minimal.py
scripts/: check_docs.py  check_import_boundaries.py  check_package_install.py  docker_refactor_contract_check.sh  refactor_contract_check.py  stream_question.py  web_chat_client.py
temporary_docs/docker-integration/: stream_scenarios.py
temporary_docs/pager/: 2026-05-19_1318-doc-cli-session-contract-review.md
tests/: test_check_docs_script.py  test_claude_tmux_control.py  test_import_boundary_script.py  test_refactor_contract_scripts.py  test_stream_question_script.py  test_web_chat_client_script.py
tests/fixtures/transcripts/: basic_tool_flow.jsonl  basic_tool_flow.normalized.json  interrupted_turn.jsonl  interrupted_turn.normalized.json  signature_thinking.jsonl  signature_thinking.normalized.json  top_level_tool_events.jsonl  top_level_tool_events.normalized.json
