[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-tmux-control"
version = "0.2.0"
description = "A tmux-based Claude Code bridge for streaming interactive sessions."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Gun Lee" }
]
license = "Apache-2.0"
keywords = ["claude-code", "tmux", "cli", "streaming"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gunlee01/claude-tmux-control"
Repository = "https://github.com/gunlee01/claude-tmux-control"

[project.scripts]
ctc = "claude_tmux_control:main"
claude-tmux-control = "claude_tmux_control:main"

[tool.setuptools]
py-modules = ["claude_tmux_control", "transcript_events"]

[tool.setuptools.data-files]
"share/claude-tmux-control" = ["claude_pricing.json"]
