[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-tmux-control"
version = "0.7.7"
description = "A tmux-based Claude Code control CLI and interactive streaming alternative to claude -p."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Gun Lee" }
]
license = "Apache-2.0"
keywords = ["claude-code", "claude-p", "claude-cli", "tmux", "cli", "automation", "agent", "jsonl", "streaming", "web-chat", "backend"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: User Interfaces",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/gunlee01/claude-tmux-control"
Repository = "https://github.com/gunlee01/claude-tmux-control"

[project.scripts]
ctc = "claude_tmux_control:main"
claude-tmux-control = "claude_tmux_control:main"

[tool.setuptools]
py-modules = ["claude_tmux_control", "transcript_events", "ctc_tmux", "ctc_launch", "ctc_transcripts", "ctc_pricing", "ctc_state", "ctc_streaming", "ctc_bridge_sessions", "ctc_cli"]

[tool.setuptools.data-files]
"share/claude-tmux-control" = ["claude_pricing.json"]
